# hub-dashboard-predtimechart

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonapp-workflow.yml
demo/: README.md  index.html  predtimechart-options.json  wk-inc-flu-hosp_01_2022-10-22.json  wk-inc-flu-hosp_01_2022-11-19.json  wk-inc-flu-hosp_01_2022-12-17.json  wk-inc-flu-hosp_US_2022-10-22.json  wk-inc-flu-hosp_US_2022-11-19.json  wk-inc-flu-hosp_US_2022-12-17.json
requirements/: requirements-dev.txt  requirements.txt
src/hub_predtimechart/: generate_data.py  generate_options.py  generate_target_data.py  hub_config.py  hub_config_ptc.py  ptc_schema.py
src/hub_predtimechart/app/: generate_json_files.py  generate_target_json_files.py  generate_target_json_files_FluSight.py
src/hub_predtimechart/util/: logs.py
tests/configs/: example-complex-no-disclaimer.yml
tests/expected/FluSight-forecast-hub/: predtimechart-options.json
tests/expected/covid19-forecast-hub/: predtimechart-options.json
tests/expected/example-complex-forecast-hub/: predtimechart-options.json
tests/expected/example-complex-forecast-hub/forecasts/: wk-inc-flu-hosp_01_2022-10-22.json  wk-inc-flu-hosp_01_2022-11-19.json  wk-inc-flu-hosp_01_2022-12-17.json  wk-inc-flu-hosp_02_2022-10-22.json  wk-inc-flu-hosp_US_2022-10-22.json  wk-inc-flu-hosp_US_2022-11-19.json  (+1 more)
tests/expected/flu-metrocast/: predtimechart-options.json
tests/hub_predtimechart/: test_generate_data.py  test_generate_json_files.py  test_generate_options.py  test_generate_target_data.py  test_hub_config.py  test_hub_config_ptc.py
(+159 files in other folders)
